--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -6,48 +6,64 @@
     - rsyslog_config
     - rsyslog
   block:
+
+    - name: Merge config
+      ansible.builtin.set_fact:
+        rsyslog_daemon_config_merged: "{{ rsyslog_daemon_config_default | zip(rsyslog_daemon_config_options) | flatten | unique }}"
+
+    - name: Debug print
+      when: rsyslog_debug is defined and rsyslog_debug
+      ansible.builtin.debug:
+        var: rsyslog_daemon_config_merged
+
     - name: Manage daemon config tasks
-      when:
-        - rsyslog_daemon_config_file is defined and rsyslog_daemon_config_file
-        - rsyslog_daemon_config_options is defined and rsyslog_daemon_config_options
+      when: rsyslog_daemon_config_merged is defined and rsyslog_daemon_config_merged
       ansible.builtin.template:
         src: rsyslog.j2
         dest: "{{ rsyslog_daemon_config_file }}"
         owner: root
         group: root
-        mode: 0644
+        mode: "0644"
       notify: Restart rsyslog
 
+    - name: Merge config
+      ansible.builtin.set_fact:
+        rsyslog_global_config_merged: "{{ rsyslog_global_config_default | zip(rsyslog_global_config_options) | flatten | unique }}"
+
+    - name: Debug print
+      when: rsyslog_debug is defined and rsyslog_debug
+      ansible.builtin.debug:
+        var: rsyslog_global_config_merged
+
     - name: Manage global config tasks
-      when:
-        - rsyslog_global_config_file is defined and rsyslog_global_config_file
-        - rsyslog_global_config_options is defined and rsyslog_global_config_options
+      when: rsyslog_global_config_merged is defined and rsyslog_global_config_merged
       ansible.builtin.template:
         src: rsyslog.conf.j2
         dest: "{{ rsyslog_global_config_file }}"
         owner: root
         group: root
-        mode: 0644
+        mode: "0644"
       notify: Restart rsyslog
 
+    - name: Debug print
+      when: rsyslog_debug is defined and rsyslog_debug
+      ansible.builtin.debug:
+        var: rsyslog_dropin_config_options
+
     - name: Manage dropin config tasks
-      when:
-        - rsyslog_dropin_config_options is defined and rsyslog_dropin_config_options
-        - item.state is defined and item.state == 'present' or item.state is undefined
+      when: item.state is defined and item.state == 'present' or item.state is undefined
       ansible.builtin.template:
         src: rsyslog_dropin.conf.j2
         dest: "{{ rsyslog_dropin_config_dirs }}/{{ item.name }}"
         owner: root
         group: root
-        mode: 0640
-      with_items: "{{ rsyslog_dropin_config_options }}"
+        mode: "0644"
+      with_items: "{{ rsyslog_dropin_config_options if rsyslog_dropin_config_options else rsyslog_dropin_config_default }}"
       notify: Restart rsyslog
 
     - name: Remove dropin config
-      when:
-        - rsyslog_dropin_config_options is defined and rsyslog_dropin_config_options
-        - item.state is defined and item.state == 'absent'
+      when: item.state is defined and item.state == 'absent'
       ansible.builtin.file:
         path: "{{ rsyslog_dropin_config_dirs }}/{{ item.name }}"
         state: absent
-      with_items: "{{ rsyslog_dropin_config_options }}"
+      with_items: "{{ rsyslog_dropin_config_options if rsyslog_dropin_config_options else rsyslog_dropin_config_default }}"
