--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,7 @@
     - name: Set dependency variables
       ansible.builtin.include_vars: "{{ item }}"
       loop:
+        - "{{ ansible_os_family }}/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
         - "{{ ansible_os_family }}.yml"
     - name: Installation tasks
       ansible.builtin.import_tasks: install.yml
